--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native-storage": "^0.1.4",
     "react-native-swiper": "^1.5.0",
     "react-native-vector-icons": "^2.1.0",
-    "react-native-vibration": "^0.2.0"
+    "react-native-vibration": "^0.2.0",
+    "react-native-video": "^0.9.0"
   }
 }
