--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,11 +126,13 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-baidu-map')
+    compile project(':react-native-wechat')
     compile project(':react-native-video')
     compile project(':react-native-vibration')
+    compile project(':react-native-vector-icons')
     compile project(':react-native-camera')
     compile project(':react-native-barcodescanner')
-    compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
