--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,15 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
+      <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="aviMnsuiNVCGrKQiGG1OV3ZMxLvnVmBd"/>
+            <!-- 微信Activity -->
+     <activity
+        android:name=".wxapi.WXEntryActivity"
+        android:label="@string/app_name"
+        android:exported="true"
+        />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
